- Added support for email and role assignees of the current step to download the PDF.
- Added the gravityflowpdf_download_authorized filter to allow the authorization to be overridden.
- Updated Members 2.0 integration to use human readable labels for the capabilities. Requires Gravity Flow 1.8.1 or greater.
- Fixed a fatal error which could occur if a required font is missing. A note is added to the workflow timeline indicating why the PDF could not be generated.